samples/_failures_safe/1761441818_43d536_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9705c554.c: In function ‘main’:
./samples/SAFE/__tmp_9705c554.c:160:5: error: expected declaration or statement at end of input
  160 |     }
      |     ^
